--- a/lesson36HW/css/style.css
+++ b/lesson36HW/css/style.css
@@ -13,22 +13,19 @@
     border-radius: 30px;
     text-align: left;
     box-sizing: border-box;
-    box-shadow: -4px -2px 4px  #000000af;
-}
-.block {
-}
+    box-shadow: -4px -2px 4px #000000af;
 
+}
 
 .mainblock {
-    display: flex;
+    /* display: inline-block; */
     flex-wrap: wrap;
     border: solid;
     background: #f0dbe7;
     height: 800px;
-    max-height: 800px;
+    max-height: 600px;
     overflow-y: auto;
+    width: 100%;
+    border-bottom-left-radius: 40px;
+    max-width: 100%;
 }
-
-
-
-
